[project]
name = "cource-moniroring-notifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Mimrik"},
    {name = "fraundist"},
    {name = "pldmval"}
]
readme = "README.md"
dynamic = ["dependencies"]

[tool.poetry]
source = [
    {name = "PyPI", priority = "default"},
    {name = "abm_pypi", url = "https://pypi2.abm-jsc.ru", priority = "primary"},
]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2"
pytz = "^2024.1"
init-helpers-abm={version="1.2.59931", source="abm_pypi"}
async-tools-abm={version="2.1.57881", source="abm_pypi"}
sqlalchemy-tools-abm={version="2.0.58719", source="abm_pypi"}
http-tools-abm={version="5.3.59932", source="abm_pypi"}
coverage = "^7.5.0"
sphinx = "^7.3.7"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pydocstyle = "^6.3.0"
babel = "^2.14.0"
doit = "^0.36.0"
wheel = "^0.43.0"
build = "^1.2.1"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools]
py-modules = []

[build-system]
requires = ["Sphinx", "setuptools", "build", "doit", "pydocstyle", "wheel"]
build-backend = "setuptools.build_meta"
